# artifaktor

./: .env  .envrc  .gitignore  artifaktor.sh  main.py  mp4_batch10_to_jpg.sh  mp4_to_sequence.sh  progress.md  pyproject.toml  requirements.txt
artifact_detector/: main.py
artifact_detector/core/: annotations.py  backend.py  clustering.py  detector.py  loader.py
artifact_detector/core/methods/: color_uniformity.py  edge_coherence.py  temporal_anomaly.py
artifact_detector/ui/: frame_viewer.py  main_window.py  param_panel.py  transport.py
label_studio/: artifact_detection_config.xml
ml_backend/grounding_dino_backend/: README.md  _wsgi.py  model.py  requirements.txt
scripts/: extract_frames.py  setup_label_studio_ml_backend.py  setup_label_studio_project.py  start_label_studio.sh  start_ml_backend.sh  warmup_ml_backend.py
specs/: prd.md
updated_json_file/: annotations.json
