[project]
name = "artifaktor"
version = "0.2.0"
description = "Lightweight frame annotation desktop app with ML backend integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "requests>=2.28",
]

[project.optional-dependencies]
# ML backend server (Label Studio–based, run separately)
ml-backend = [
    "scikit-image>=0.21",
    "label-studio",
    "label-studio-sdk",
    "label-studio-ml",
]

[project.scripts]
artifaktor = "artifact_detector.main:main"
